# CodeReview

./: .dockerignore  Dockerfile  Project_Report.md  README.md  benchmark_parallel.py  generate_scenarios.py  generate_scenarios_llm.py  inference.py  locustfile.py  models.py  openenv.yaml  push_inference.py  pyproject.toml  test_env.py  test_features.py  trl_example.py  upload_to_hf.py
.github/workflows/: deploy.yml
_staging/: README.md  __init__.py  baseline.py  client.py  inference.py  pyproject.toml  validate_submission.py
_staging/data/hard/: scenarios.json
_staging/data/medium/: scenarios.json
_staging/server/: author_persona.py  code_review_environment.py  difficulty_validator.py
data/easy/: scenarios.json
data/scenarios/hidden/easy/: scenario_h_001.json
data/scenarios/hidden/hard/: scenario_h_002.json
experiments/: baseline_curve.csv  calibration_data.csv  calibration_results.json  difficulty_stats.json  plot_calibration.py  plot_rl_curve.py  rl_training_results.json  run_real_evaluation.py  test_g4f.py  test_hf.py
frontend/: DESIGN.md  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: DemoFlow.jsx
frontend/src/lib/: api.js
frontend/src/pages/: AgentNetwork.jsx  CommandCenter.jsx  Dashboard.jsx  GraderPage.jsx  IntelReview.jsx  Metrics.jsx  MissionMetrics.jsx  NewReview.jsx  ReplayPage.jsx  ReviewDetail.jsx  SettingsPage.jsx
server/: Dockerfile  app.py  author_persona.py  code_review_environment.py  grader.py  leaderboard_db.py  requirements.txt  session_manager.py
(+59 files in other folders)
